[package]
name = "spaceship_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking"] }
rand = "0.8.5"
# Enable small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimization for dependencies (incl. Bevy)
[profile.dev.package."*"]
opt-level = 3
